// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions accountUpdate 1`] = `
Object {
  "type": "account",
  "value": "test",
}
`;

exports[`actions ethBalanceUpdate 1`] = `
Object {
  "type": "ethBalance",
  "value": Object {
    "allowance": 789,
    "eth": 123,
    "weth": 456,
  },
}
`;

exports[`actions getAccount 1`] = `
Array [
  Object {
    "type": "account",
    "value": "0x0",
  },
]
`;

exports[`actions getBalance 1`] = `
Array [
  Object {
    "type": "ethBalance",
    "value": Object {
      "allowance": 333,
      "eth": 111,
      "weth": 222,
    },
  },
]
`;

exports[`actions getBalance 2`] = `
Array [
  Array [
    "0xAccount",
  ],
]
`;

exports[`actions getBalance 3`] = `
Array [
  Array [
    "WETH",
    "0xAccount",
  ],
]
`;

exports[`actions getBalance 4`] = `
Array [
  Array [
    "WETH",
    "0xAccount",
  ],
]
`;

exports[`actions getBalance dummy 1`] = `Array []`;

exports[`actions getNetwork 1`] = `
Array [
  Object {
    "type": "network",
    "value": 123,
  },
]
`;

exports[`actions networkUpdate 1`] = `
Object {
  "type": "network",
  "value": 123,
}
`;

exports[`actions refresh 1`] = `
Array [
  Object {
    "type": "network",
    "value": 123,
  },
  Object {
    "type": "account",
    "value": "0x0",
  },
  Object {
    "type": "ethBalance",
    "value": Object {
      "allowance": 333,
      "eth": 111,
      "weth": 222,
    },
  },
]
`;
